--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favIcon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Libertinus+Keyboard&family=Molengo&family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Medical Healthcare</title>
+    <meta name="description" content="A patient-first medical healthcare service offering trusted consultations, preventive care, and qualified doctors with a focus on safety, transparency, and privacy." >
+    <title>Medical's Healthcare</title>
   </head>
   <body>
     <div id="root"></div>
