--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favIcon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" fetchpriority="high" as="image" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgnx2ZVMlydsd5Q9-Dy3dVJ_bfC2jTQlJEa9Sxv8LS5r4DbR-mxo0TEBAuz2afpctAjaF_nzWjwkEInm3WRsKcu5nW1DrQf7O-9ETeUVVwmK_W2ytXSYIR7_H7x3XBQfq5sYIwUtQ/s1600/Nueva+imagen.WebP" type="image/webp">
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Libertinus+Keyboard&family=Molengo&family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="A patient-first medical healthcare service offering trusted consultations, preventive care, and qualified doctors with a focus on safety, transparency, and privacy." >
